--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-monorepo/_github_exporter_example_monorepo_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-monorepo/_github_exporter_example_monorepo_port_app_config.mdx
@@ -17,7 +17,7 @@ resources:
         mappings:
           identifier: ".folder.name"
           title: ".folder.name"
-          blueprint: '"folder"'
+          blueprint: '"microservice"'
           properties:
             repositoryUrl: .repo.html_url + "/tree/" + .repo.default_branch  + "/" + .folder.path
             readme: file://README.md
