--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-monorepo/_github_exporter_example_monorepo_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-monorepo/_github_exporter_example_monorepo_port_app_config.mdx
@@ -4,18 +4,6 @@
 
 ```yaml showLineNumbers
 resources:
-  - kind: repository
-    selector:
-      query: "true"
-    port:
-      entity:
-        mappings:
-          identifier: .name
-          title: .name
-          blueprint: '"microservice"'
-          properties:
-            readme: file://README.md
-            repositoryUrl: .links.html.href
   - kind: folder
     selector:
       query: "true" # JQ boolean query. If evaluated to false - skip syncing the object.
@@ -27,13 +15,12 @@ resources:
     port:
       entity:
         mappings:
-          identifier: .folder.name
-          blueprint: '"folder"'
+          identifier: ".folder.name"
+          title: ".folder.name"
+          blueprint: '"microservice"'
           properties:
-            link: .repo.links.html.href + "/src/" + .repo.mainbranch.name + "/" + .folder.path
+            repositoryUrl: .repo.html_url + "/tree/" + .repo.default_branch  + "/" + .folder.path
             readme: file://README.md
-          relations:
-            service: .repo.name
 ```
 
 </details>
