--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jira/_example_jira_issue_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jira/_example_jira_issue_blueprint.mdx
@@ -22,7 +22,7 @@
       "changingUser": {
         "type": "string",
         "title": "Changing user",
-        "description": "The user that madet the latest change"
+        "description": "The user that made the latest change"
       },
       "issueUrl": {
         "type": "string",
