--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/golang/_example_package_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/golang/_example_package_blueprint.mdx
@@ -23,7 +23,7 @@
         "title": "Indirect Dependency",
         "description": "Whether the dependency is indirect"
       },
-      "packageamNe": {
+      "packageName": {
         "type": "string",
         "title": "Package Name",
         "description": "The name of the dependency package"
