--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/golang/_example_package_webhook_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/golang/_example_package_webhook_config.mdx
@@ -2,7 +2,7 @@
 {
   "identifier": "goDependencyMapper",
   "title": "Go Dependency Mapper",
-  "description": "A webhook configuration to map Go dependencies to Port",
+  "description": "A webhook configuration to map packages and dependencies from a file",
   "icon": "Go",
   "mappings": [
     {
