--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/python/_example_package_webhook_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/python/_example_package_webhook_config.mdx
@@ -2,7 +2,7 @@
 {
   "identifier": "packagesMapper",
   "title": "Package Mapper",
-  "description": "A webhook configuration to map software package file",
+  "description": "A webhook configuration to map packages and dependencies from a file",
   "icon": "Package",
   "mappings": [
     {
