delete standalone go docs and add to packages section

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/golang/_example_package_webhook_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/golang/_example_package_webhook_config.mdx
@@ -16,6 +16,9 @@
           "version": ".body.version",
           "indirect": ".body.indirect"
         }
+        "relations": {
+          "service": ".body.service"
+        }
       }
     }
   ],
