--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/python/_example_package_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/python/_example_package_blueprint.mdx
@@ -16,11 +16,11 @@
   "mirrorProperties": {},
   "calculationProperties": {},
   "relations": {
-    "microservice": {
+    "service": {
       "title": "Service",
       "target": "service",
-      "required": true,
-      "many": false
+      "required": false,
+      "many": true
     }
   }
 }
