--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/golang/_example_package_webhook_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/golang/_example_package_webhook_config.mdx
@@ -2,25 +2,27 @@
 {
   "identifier": "goDependencyMapper",
   "title": "Go Dependency Mapper",
-  "description": "A webhook configuration to map Go dependencies to Port",
+  "description": "A webhook configuration to map packages and dependencies from a file",
   "icon": "Go",
   "mappings": [
     {
-      "blueprint": "goDependency",
+      "blueprint": "package",
       "entity": {
         "identifier": ".body.package_name",
         "title": ".body.package_url",
         "properties": {
-          "package_name": ".body.package_name",
-          "package_url": ".body.package_url",
+          "packageName": ".body.package_name",
+          "packageUrl": ".body.package_url",
           "version": ".body.version",
           "indirect": ".body.indirect"
+        }
+        "relations": {
+          "service": ".body.service"
         }
       }
     }
   ],
-  "enabled": true
+  "enabled": true,
+  "security": {}
 }
-
-
 ```
