Rewrite Python Script to ingest Open Issues from Jira to Port 2

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jira/_example_jira_issue_configuration_python.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/resources/jira/_example_jira_issue_configuration_python.mdx
@@ -1,6 +1,7 @@
 ```python showLineNumbers
 # Dependencies to Install
 # pip install jira
+# pip install requests
 
 from jira import JIRA
 import requests
@@ -25,7 +26,7 @@ def send_to_port(data, port_url):
     return response
 
 def process_issues(issues):
-    # This function processes the issues from JIR
+    # This function processes the issues from JIRA
     total_issues_processed = 0
 
     for issue in issues:
