changed property id to match the template

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-issue/_github_exporter_example_issue_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-issue/_github_exporter_example_issue_port_app_config.mdx
@@ -15,7 +15,7 @@ resources:
           blueprint: '"microservice"'
           properties:
             readme: file://README.md
-            repositoryUrl: .html_url
+            url: .html_url
   - kind: issue
     selector:
       query: ".pull_request == null" # JQ boolean query. If evaluated to false - skip syncing the object.
