--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-workflow-workflowrun/_github_exporter_example_wf_wfr_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/example-workflow-workflowrun/_github_exporter_example_wf_wfr_port_app_config.mdx
@@ -15,7 +15,7 @@ resources:
           blueprint: '"microservice"'
           properties:
             readme: file://README.md
-            repositoryUrl: .html_url
+            url: .html_url
   - kind: workflow
     selector:
       query: "true" # JQ boolean query. If evaluated to false - skip syncing the object.
