--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/bitbucket/_bitbucket_exporter_example_monorepo_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/bitbucket/_bitbucket_exporter_example_monorepo_port_app_config.mdx
@@ -18,7 +18,7 @@ resources:
           identifier: .folder.name
           blueprint: '"microservice"'
           properties:
-            repositoryUrl: .repo.links.html.href + "/src/" + .repo.mainbranch.name + "/" + .folder.path
+            url: .repo.links.html.href + "/src/" + .repo.mainbranch.name + "/" + .folder.path
             readme: file://README.md
 ```
 
