--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_example_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/github/_github_exporter_example_port_app_config.mdx
@@ -15,7 +15,7 @@ resources:
           blueprint: '"microservice"'
           properties:
             readme: file://README.md # fetching the README.md file that is within the root folder of the repository and ingesting its contents as a markdown property
-            repositoryUrl: .html_url
+            url: .html_url
   - kind: pull-request
     selector:
       query: "true" # JQ boolean query. If evaluated to false - skip syncing the object.
