Renmae provider from port-labs to port

--- a/docs/build-your-software-catalog/sync-data-to-catalog/iac/terraform/_terraform_provider_base.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/iac/terraform/_terraform_provider_base.mdx
@@ -7,7 +7,7 @@ To install the Terraform provider, create a `.tf` file specifying the provider a
 ```hcl showLineNumbers
 terraform {
   required_providers {
-    port-labs = {
+    port = {
       source  = "port-labs/port-labs"
       version = "~> 1.0.0"
     }
