Change provider name

--- a/docs/build-your-software-catalog/sync-data-to-catalog/iac/terraform/_terraform_provider_base.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/iac/terraform/_terraform_provider_base.mdx
@@ -14,7 +14,7 @@ terraform {
   }
 }
 
-provider "port-labs" {
+provider "port" {
   client_id = "{YOUR CLIENT ID}"     # or set the environment variable PORT_CLIENT_ID
   secret    = "{YOUR CLIENT SECRET}" # or set the environment variable PORT_CLIENT_SECRET
 }
