--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/soap/_example_soap_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/soap/_example_soap_blueprint.mdx
@@ -3,7 +3,7 @@
   "identifier": "soapApi",
   "description": "This blueprint represents a SOAP API in our software catalog",
   "title": "SOAP Api",
-  "icon": "ApiDoc",
+  "icon": "defaultIcon",
   "schema": {
     "properties": {
       "url": {
