--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/soap/_example_soap_webhook_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/soap/_example_soap_webhook_config.mdx
@@ -3,7 +3,7 @@
   "identifier": "soapApiMapper",
   "title": "SOAP API Mapper",
   "description": "A webhook configuration to ingest SOAP API paths from a file",
-  "icon": "ApiDoc",
+  "icon": "defaultIcon",
   "mappings": [
     {
       "blueprint": "soapApi",
