--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/soap/_example_soap_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/soap/_example_soap_blueprint.mdx
@@ -2,8 +2,8 @@
 {
   "identifier": "soapApi",
   "description": "This blueprint represents a SOAP API in our software catalog",
-  "title": "SOAP Api",
-  "icon": "defaultIcon",
+  "title": "SOAP API",
+  "icon": "ApiDoc",
   "schema": {
     "properties": {
       "url": {
