Apply suggestions from code review

--- a/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/sbom/_example_sbom_component_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/webhook/examples/packages/resources/sbom/_example_sbom_component_blueprint.mdx
@@ -2,7 +2,7 @@
 {
   "identifier": "sbomComponent",
   "description": "This blueprint represents an SBOM component in our software catalog",
-  "title": "SBOM Components",
+  "title": "SBOM Component",
   "icon": "Package",
   "schema": {
     "properties": {
