--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_supported_resources.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_supported_resources.mdx
@@ -3,7 +3,7 @@
 The mapping should refer to one of the items in the example response:
 
 - [`project`](https://docs.gitlab.com/ee/api/groups.html#list-a-groups-projects)
-- [`mergeRequest`](https://docs.gitlab.com/ee/api/merge_requests.html#list-project-merge-requests)
+- [`merge-request`](https://docs.gitlab.com/ee/api/merge_requests.html#list-project-merge-requests)
 - [`pipeline`](https://docs.gitlab.com/ee/api/pipelines.html#list-project-pipelines)
 - [`job`](https://docs.gitlab.com/ee/api/jobs.html#list-project-jobs)
 - [`issue`](https://docs.gitlab.com/ee/api/issues.html#list-project-issues)
