--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_supported_resources.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_supported_resources.mdx
@@ -1,4 +1,4 @@
-:::tip Available Gitlab resources
+:::tip Available GitLab resources
 
 The mapping should refer to one of the items in the example response:
 
