--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-issue/_git_exporter_example_issue_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-issue/_git_exporter_example_issue_blueprint.mdx
@@ -54,6 +54,14 @@
         }
       }
     }
+  },
+  "relations": {
+    "microservice": {
+      "target": "microservice",
+      "title": "Microservice",
+      "required": true,
+      "many": false
+    }
   }
 }
 ```
