--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-issue/_gitlab_exporter_example_issue_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-issue/_gitlab_exporter_example_issue_port_app_config.mdx
@@ -22,6 +22,8 @@ resources:
             description: .description
             link: .web_url
             labels: "[.labels[]]"
+          relations:
+            microservice: .references.full | gsub("#.+"; "")
 ```
 
 </details>
