--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-pipeline-job/_git_exporter_example_pipeline_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/example-pipeline-job/_git_exporter_example_pipeline_blueprint.mdx
@@ -69,7 +69,14 @@
   },
   "mirrorProperties": {},
   "calculationProperties": {},
-  "relations": {}
+  "microservice": {
+    "service": {
+      "target": "microservice",
+      "type": "Microservice",
+      "required": true,
+      "many": false
+    }
+  }
 }
 ```
 
