--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_merge_request_blueprint.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_merge_request_blueprint.mdx
@@ -44,6 +44,13 @@
         "type": "string"
       }
     }
+  },
+  "relations": {
+    "pipeline": {
+      "target": "pipeline",
+      "required": false,
+      "many": false
+    }
   }
 }
 ```
