--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_supported_resources.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_supported_resources.mdx
@@ -1,6 +1,6 @@
 :::tip Available GitLab resources
 
-The mapping should refer to one of the items in the example response:
+The following resources can be used to map data from GitLab, it is possible to reference any field that appears in the API responses linked below for the GitLab integration mapping configuration.
 
 - [`project`](https://docs.gitlab.com/ee/api/groups.html#list-a-groups-projects)
 - [`merge-request`](https://docs.gitlab.com/ee/api/merge_requests.html#list-project-merge-requests)
