Add search and file mapping capability docs

--- a/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_port_app_config.mdx
+++ b/docs/build-your-software-catalog/sync-data-to-catalog/git/gitlab/_gitlab_exporter_example_port_app_config.mdx
@@ -15,6 +15,7 @@ resources:
           blueprint: '"microservice"'
           properties:
             url: .web_url
+            readme: file://README.md
             description: .description
             namespace: .namespace.name
             full_path: .namespace.full_path
